# DeepAcceptor

./: .gitignore  README.md  Tutoriol.ipynb  bond1.py  classification.py  compound_constants.py  data.py  dataset.py  dual_dataset.py  environment.yml  model.py  mul_task_pretrain.py  multi_clf.py  pretrain.py  regression.py  test.py  tsne.py  utils.py
DeepAcceptor/: model.py  predict.py
Discussion/: ANN.py  GNN.py  RF.py  dict.json  preprocess.py  test.txt  train.txt
abcBERT/: dataset.py  predict.py  predictbysmiles.py  pretrain.py  regression.py  results.csv  test.ipynb  utils.py
data/: count_results.npy  val.csv
medium_weights3/: data13Medium3030.npy  (+16 more)
screen/vae/: chemistry_vae.py  pyproject.toml  settings.yml
screen/vae/datasets/: 0.txt  da.txt  debug.txt
screen/vae/datasets/datai/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+201 more)
screen/vae/datasets/datao/datao/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  134.csv  (+200 more)
screen/vae/saved_models/119/: D  E
(+119 files in other folders)
